--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -84,9 +82,9 @@ body {
     transition: background-color 0.2s ease-in-out;
 }
 
-.reset-button:hover {
-    background-color: #2b272d;
-}
+    .reset-button:hover {
+        background-color: #2b272d;
+    }
 
 .spinner {
     display: none;
@@ -106,7 +104,15 @@ body {
     color: #e0e0e0;
     font-style: italic;
     animation: pulse 2.5s infinite;
+}
 
+.loading-subtext {
+    color: #aaa;
+    font-size: 0.70em;
+    margin-top: 4px;
+    text-align: center;
+    font-style: italic;
+    display:;
 }
 
 .footer {
@@ -129,7 +135,6 @@ body {
     100% {
         opacity: 0;
     }
-
 }
 
 @keyframes s3 {
